# heimdall_gui

./: .gitignore  README.md  gui_launcher.desktop  install_desktop.sh  launch.sh  reset_daemon.sh
src/heimdall_gui/: package.xml  setup.cfg  setup.py
src/heimdall_gui/config/: params.yaml
src/heimdall_gui/heimdall_gui/: __init__.py  current_display_widget.py  heimdall_controls.py  heimdall_ros_link.py  main.py  science.py  spectrometer_readings.py
src/heimdall_gui/heimdall_gui/rover_gui_common/: __init__.py  rover_map.py  rover_ros_link.py
src/heimdall_gui/heimdall_gui/rover_gui_common/ui_python/: __init__.py  ed_edit_dialog.py
src/heimdall_gui/heimdall_gui/ui_python/: __init__.py  current_display.py  heimdall_controls_tab.py  science_tab.py
src/heimdall_gui/heimdall_gui/ui_xml/: ,.  science_tab.ui  science_ui.py
src/heimdall_gui/heimdall_gui/urc_gui_common/: __init__.py  app.py  camera_link.py  ros_link.py  status_bar.py  tile_scraper.py
src/heimdall_gui/heimdall_gui/urc_gui_common/helpers/: __init__.py  file_helper.py  internet.py  validator.py
src/heimdall_gui/heimdall_gui/urc_gui_common/tabs/: __init__.py  four_camera.py  map.py  settings.py  single_camera.py  six_camera.py  tools.py
src/heimdall_gui/heimdall_gui/urc_gui_common/ui_python/: optimization_dialog.py  ros_console_widget.py  set_time_dialog.py
src/heimdall_gui/heimdall_gui/urc_gui_common/widgets/: __init__.py  antenna_control.py  checklist.py  compass.py  current_widget.py  graph_widget.py  lines.py  map_viewer.py  ros_console.py  (+3 more)
src/heimdall_gui/launch/: gui_bringup.launch.py
(+13 files in other folders)
